--- a/style.css
+++ b/style.css
@@ -2,3 +2,30 @@ h1,
 h2 {
   font-family: Lato;
 }
+
+.container {
+  height: 100vh;
+  border: 2px solid;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: stretch;
+}
+
+.item1,
+.item2,
+.item3 {
+  height: 100px;
+}
+
+.item1 {
+  background-color: rgb(0, 81, 255);
+}
+
+.item2 {
+  background-color: rgb(255, 51, 0);
+}
+
+.item3 {
+  background-color: rgb(195, 0, 255);
+}
